--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     Ini baris kedua
     <p>coba ya</p>
     <p>safitri add text lagi yaaa</p>
+    <p>coba ya</p>
+    <p>safitri add text lagi yaaa</p>
 </html>
 
